# scpiclient

./: Cargo.toml  Cross.toml  README.md  build-all.sh
.cargo/: config.toml
src/: main.rs
