[package]
name = "scpi"
version = "0.4.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
clap = { version = "4.5.7", features = ["derive"] }
anyhow = "1.0.86"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
atty = "0.2.14"
rustyline = { version = "14.0.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
debug = false
panic = "abort"
opt-level = 3
