[package]
name = "scpi"
version = "0.5.1"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.89"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
rustyline = { version = "14.0.0", features = ["derive"] }
socket2 = "0.5.7"
crossterm = "0.28.1"

[dev-dependencies]
tokio-test = "0.4.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
debug = false
panic = "abort"
opt-level = 3
